# Medica

./: .gitignore  embaddings.py  main.py  pyproject.toml  requirements.txt
